# ChatCraft

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  vitest.config.ts
crates/chatcraft-core/: Cargo.toml
crates/chatcraft-core/src/: lib.rs  package.rs  session.rs  settings.rs
crates/chatcraft-core/tests/: session_tests.rs
src/: cli.ts
src/core/: errors.ts  index.ts  package.ts  session.ts  settings.ts  types.ts
src/mcp/: server.ts
src/tools/: index.ts
tests/adapters/: cli.test.ts  tool-runtime.test.ts
tests/core/: project-session.test.ts
tests/helpers/: threeMfFixture.ts
