[package]
name = "chatcraft-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Safe 3MF project editing core for ChatCraft."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
zip = { version = "4.4", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.38", features = ["serialize"] }
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
tempfile = "3.23"
